# leetcode-so-easy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
SQL/: 175.sql  181.sql  183.sql  196.sql
array/: merger_sort_array88.py
hello-world/: hello.go  hello.js
math/: mysqrt69.py
problems/array/: lc0088_merge_sorted_array.py
problems/backtracking/: lc0093_restore_ip_addresses.py  lc0140_word_break_ii.py  lc0241_diff_ways_to_compute.py
problems/binary_search/: lc0069_sqrtx.py
problems/string/: lc0058_length_of_last_word.py
problems/tree/: lc0095_unique_bst_ii.py  lc0333_largest_bst_subtree.py  lc0894_all_possible_fbt.py
problems/two_pointers/: lc0015_three_sum.py
recursion/: all_possible_fbt.py  diffWaysToCompute241.py  generateTrees95.py  restoreIpAddresses.py  wrod_break140.py
str/: length_last_word.py
tests/array/: test_lc0088_merge_sorted_array.py
tests/backtracking/: test_lc0093_restore_ip_addresses.py  test_lc0140_word_break_ii.py  test_lc0241_diff_ways_to_compute.py
tests/binary_search/: test_lc0069_sqrtx.py
tests/string/: test_lc0058_length_of_last_word.py
tests/tree/: test_lc0095_unique_bst_ii.py  test_lc0333_largest_bst_subtree.py  test_lc0894_all_possible_fbt.py
tests/two_pointers/: test_lc0015_three_sum.py
